Add support for links to external websites or notes (#21)

--- a/docs/docs/book-notes.mdx
+++ b/docs/docs/book-notes.mdx
@@ -91,3 +91,11 @@ To group books by lists in the **Library**, select **List** from the grouping dr
 
 A personal comment on that book.
 This is shown in the **book details modal** and can be your opinion, a summary, or any other note that helps you recall key information at a glance.
+
+### Links
+
+**Property type:** List\
+**Default name:** `links`
+
+A list of links to external websites (e.g., `https://books.test/dracula`) or related notes within your vault (`[[Dracula (Reading Notes)]]`).
+These links will appear in the **Book Details Modal**.
